--- a/package.json
+++ b/package.json
@@ -197,6 +197,7 @@
     "simple-git-hooks": "^2.13.0",
     "strip-indent": "^4.0.0",
     "stylelint": "^16.19.0",
+    "stylelint-order": "^7.0.0",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.31.0"
   },
