--- a/package.json
+++ b/package.json
@@ -1,262 +1,261 @@
 {
-  "name": "@sshoc/sshoc-marketplace-frontend",
-  "private": true,
-  "license": "Apache-2.0",
-  "engines": {
-    "node": "22.x",
-    "yarn": "1.x"
-  },
-  "packageManager": "yarn@1.22.22",
-  "scripts": {
-    "analyze-bundle": "cross-env BUNDLE_ANALYZER=enabled next build",
-    "build": "next build",
-    "cms:server": "netlify-cms-proxy-server",
-    "dev": "next dev",
-    "format:check": "prettier . --cache --cache-location ./.prettiercache --check",
-    "format:fix": "yarn run format:check --write",
-    "lint:check": "run-p --continue-on-error \"lint:*:check\"",
-    "lint:fix": "run-p --continue-on-error \"lint:*:fix\"",
-    "lint:code:check": "eslint . --cache",
-    "lint:code:fix": "yarn run lint:code:check --fix",
-    "lint:styles:check": "stylelint \"./**/*.css\" --cache --ignore-path ./.gitignore",
-    "lint:styles:fix": "yarn run lint:styles:check --fix",
-    "preinstall": "npx only-allow yarn",
-    "postinstall": "patch-package",
-    "prepare": "run-s setup",
-    "setup": "is-ci || simple-git-hooks",
-    "start": "next start",
-    "types:check": "tsc --noEmit",
-    "validate": "run-s format:check lint:check types:check"
-  },
-  "dependencies": {
-    "@mdx-js/loader": "^2.1.0",
-    "@next/bundle-analyzer": "^13.5.8",
-    "@react-aria/accordion": "^3.0.0-alpha.37",
-    "@react-aria/autocomplete": "^3.0.0-alpha.37",
-    "@react-aria/breadcrumbs": "^3.5.20",
-    "@react-aria/button": "^3.11.1",
-    "@react-aria/checkbox": "^3.15.1",
-    "@react-aria/combobox": "^3.11.1",
-    "@react-aria/dialog": "^3.5.21",
-    "@react-aria/focus": "^3.19.1",
-    "@react-aria/i18n": "^3.12.5",
-    "@react-aria/interactions": "^3.23.0",
-    "@react-aria/label": "^3.7.14",
-    "@react-aria/link": "^3.7.8",
-    "@react-aria/listbox": "^3.14.0",
-    "@react-aria/menu": "^3.17.0",
-    "@react-aria/numberfield": "^3.11.10",
-    "@react-aria/overlays": "^3.25.0",
-    "@react-aria/progress": "^3.4.19",
-    "@react-aria/searchfield": "^3.8.0",
-    "@react-aria/select": "^3.15.1",
-    "@react-aria/separator": "^3.4.5",
-    "@react-aria/textfield": "^3.16.0",
-    "@react-aria/tooltip": "^3.7.11",
-    "@react-aria/utils": "^3.27.0",
-    "@react-aria/virtualizer": "^3.10.1",
-    "@react-aria/visually-hidden": "^3.8.19",
-    "@react-stately/checkbox": "^3.6.11",
-    "@react-stately/collections": "^3.12.1",
-    "@react-stately/combobox": "^3.10.2",
-    "@react-stately/data": "^3.12.1",
-    "@react-stately/layout": "^3.13.9",
-    "@react-stately/list": "^3.11.2",
-    "@react-stately/menu": "^3.9.1",
-    "@react-stately/numberfield": "^3.9.9",
-    "@react-stately/overlays": "^3.6.13",
-    "@react-stately/searchfield": "^3.5.9",
-    "@react-stately/select": "^3.6.10",
-    "@react-stately/toggle": "^3.8.1",
-    "@react-stately/tooltip": "^3.5.1",
-    "@react-stately/tree": "^3.8.7",
-    "@react-stately/virtualizer": "^3.7.1",
-    "@stefanprobst/assert": "^1.0.3",
-    "@stefanprobst/capitalize": "^1.0.2",
-    "@stefanprobst/is-absolute-url": "^1.0.2",
-    "@stefanprobst/is-nonempty-array": "^1.0.1",
-    "@stefanprobst/is-nonempty-string": "^1.0.1",
-    "@stefanprobst/log": "^1.0.3",
-    "@stefanprobst/netlify-cms-oauth-client": "^0.1.3",
-    "@stefanprobst/next-error-boundary": "legacy",
-    "@stefanprobst/next-i18n": "legacy",
-    "@stefanprobst/next-page-metadata": "legacy",
-    "@stefanprobst/next-svg": "^4.2.1",
-    "@stefanprobst/next-theme": "legacy",
-    "@stefanprobst/pick": "^1.0.3",
-    "@stefanprobst/range": "^1.1.1",
-    "@stefanprobst/rehype-extract-toc": "^2.1.3",
-    "@stefanprobst/rehype-fragment-links": "^1.0.1",
-    "@stefanprobst/rehype-image-captions": "^1.1.0",
-    "@stefanprobst/rehype-lists-with-aria-role": "^1.0.1",
-    "@stefanprobst/rehype-next-image": "^1.0.0",
-    "@stefanprobst/rehype-next-links": "^2.0.2",
-    "@stefanprobst/rehype-noreferrer-links": "^1.0.2",
-    "@stefanprobst/rehype-shiki": "^2.2.0",
-    "@stefanprobst/remark-extract-yaml-frontmatter": "^2.2.3",
-    "@stefanprobst/remark-mdx-page": "^3.0.1",
-    "@stefanprobst/remark-resource-links": "^1.0.2",
-    "@stefanprobst/remark-smart-quotes": "^1.0.1",
-    "@stefanprobst/request": "^0.1.10",
-    "@stefanprobst/val-loader": "^4.0.0-4",
-    "change-case": "^4.1.2",
-    "clsx": "^1.1.1",
-    "date-fns": "^2.28.0",
-    "final-form": "^4.20.6",
-    "final-form-arrays": "^3.0.2",
-    "final-form-focus": "^1.1.2",
-    "final-form-set-field-data": "^1.0.2",
-    "final-form-set-field-touched": "^1.0.1",
-    "hast-util-heading-rank": "^2.1.0",
-    "hastscript": "^7.0.2",
-    "highlight-words-core": "^1.2.2",
-    "js-yaml": "^4.1.0",
-    "jwt-decode": "^3.1.2",
-    "mdast-util-to-string": "^3.1.0",
-    "netlify-cms-app": "^2.15.72",
-    "next": "^15.3.1",
-    "nodemailer": "^6.7.2",
-    "nprogress": "^0.2.0",
-    "patch-package": "^6.4.7",
-    "postinstall-postinstall": "^2.1.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-final-form": "^6.5.9",
-    "react-final-form-arrays": "^3.1.4",
-    "react-query": "^3.39.3",
-    "react-toastify": "8.1.1",
-    "rehype-react": "^7.0.4",
-    "rehype-slug": "^5.0.1",
-    "rehype-stringify": "^9.0.2",
-    "remark-gfm": "^3.0.1",
-    "remark-parse": "^10.0.1",
-    "remark-rehype": "^10.1.0",
-    "remark-stringify": "^10.0.2",
-    "retext": "^8.1.0",
-    "retext-smartypants": "^5.1.0",
-    "sharp": "^0.34.1",
-    "shiki": "^0.10.0",
-    "strip-markdown": "^5.0.0",
-    "unified": "^10.1.1",
-    "unist-util-visit": "^4.1.0",
-    "use-composed-ref": "^1.4.0",
-    "vfile": "^5.3.0",
-    "vfile-matter": "^3.0.1",
-    "zod": "^3.14.4"
-  },
-  "devDependencies": {
-    "@acdh-oeaw/commitlint-config": "^2.0.0",
-    "@acdh-oeaw/eslint-config": "^2.0.9",
-    "@acdh-oeaw/prettier-config": "^2.0.1",
-    "@acdh-oeaw/stylelint-config": "^2.1.2",
-    "@acdh-oeaw/tsconfig": "^1.5.1",
-    "@commitlint/cli": "^19.8.0",
-    "@faker-js/faker": "^6.1.1",
-    "@mswjs/data": "^0.9.2",
-    "@next/eslint-plugin-next": "^15.3.1",
-    "@react-types/button": "^3.10.2",
-    "@react-types/checkbox": "^3.9.1",
-    "@react-types/combobox": "^3.13.2",
-    "@react-types/dialog": "^3.5.15",
-    "@react-types/listbox": "^3.5.4",
-    "@react-types/menu": "^3.9.14",
-    "@react-types/overlays": "^3.8.12",
-    "@react-types/progress": "^3.5.9",
-    "@react-types/select": "^3.9.9",
-    "@react-types/shared": "^3.27.0",
-    "@react-types/textfield": "^3.11.0",
-    "@stefanprobst/next-image-loader": "^1.0.3",
-    "@types/final-form-focus": "^1.1.2",
-    "@types/final-form-set-field-data": "^1.0.0",
-    "@types/final-form-set-field-touched": "^1.0.0",
-    "@types/highlight-words-core": "^1.2.1",
-    "@types/mdx": "^2.0.1",
-    "@types/node": "^22.15.2",
-    "@types/nodemailer": "^6.4.4",
-    "@types/nprogress": "^0.2.0",
-    "@types/react": "^18.3.20",
-    "@types/react-dom": "^18.3.6",
-    "autoprefixer": "^10.4.2",
-    "cross-env": "^7.0.3",
-    "eslint": "^9.25.1",
-    "eslint-config-flat-gitignore": "^2.1.0",
-    "globals": "^16.0.0",
-    "jose": "^4.3.8",
-    "lint-staged": "^15.5.1",
-    "match-sorter": "^6.3.1",
-    "msw": "^0.39.2",
-    "netlify-cms-proxy-server": "^1.3.23",
-    "npm-run-all2": "^7.0.2",
-    "postcss": "^8.4.5",
-    "postcss-custom-media": "^8.0.0",
-    "postcss-nesting": "^10.1.2",
-    "prettier": "^3.5.3",
-    "remark-cli": "^10.0.1",
-    "remark-frontmatter": "^4.0.1",
-    "remark-mdx": "^2.1.0",
-    "simple-git-hooks": "^2.13.0",
-    "strip-indent": "^4.0.0",
-    "stylelint": "^16.19.0",
-    "stylelint-order": "^7.0.0",
-    "typescript": "^5.8.3",
-    "typescript-eslint": "^8.31.0"
-  },
-  "browserslist": {
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ],
-    "production": [
-      ">=0.75%",
-      "not dead",
-      "not op_mini all"
-    ]
-  },
-  "commitlint": {
-    "extends": "@acdh-oeaw/commitlint-config"
-  },
-  "lint-staged": {
-    "*.@(js|ts|tsx)": [
-      "eslint --cache --fix",
-      "prettier --cache --cache-location ./.prettiercache --write"
-    ],
-    "*.@(css)": [
-      "stylelint --cache --fix",
-      "prettier --cache --cache-location ./.prettiercache --write"
-    ],
-    "*.!(css|js|ts|tsx)": "prettier --cache --cache-location ./.prettiercache --ignore-unknown --write"
-  },
-  "msw": {
-    "workerDirectory": "public"
-  },
-  "postcss": {
-    "plugins": {
-      "postcss-custom-media": {},
-      "postcss-nesting": {},
-      "autoprefixer": {}
-    }
-  },
-  "prettier": "@acdh-oeaw/prettier-config",
-  "remarkConfig": {
-    "plugins": [
-      "frontmatter",
-      "gfm"
-    ]
-  },
-  "simple-git-hooks": {
-    "commit-msg": "yarn commitlint --edit",
-    "pre-commit": "yarn lint-staged"
-  },
-  "stylelint": {
-    "extends": "@acdh-oeaw/stylelint-config",
-    "rules": {
-      "block-no-empty": [
-        true,
-        {
-          "severity": "warning"
-        }
-      ]
-    }
-  }
+	"name": "@sshoc/sshoc-marketplace-frontend",
+	"private": true,
+	"license": "Apache-2.0",
+	"engines": {
+		"node": "22.x",
+		"yarn": "1.x"
+	},
+	"packageManager": "yarn@1.22.22",
+	"scripts": {
+		"analyze-bundle": "cross-env BUNDLE_ANALYZER=enabled next build",
+		"build": "next build",
+		"cms:server": "netlify-cms-proxy-server",
+		"dev": "next dev",
+		"format:check": "prettier . --cache --cache-location ./.prettiercache --check",
+		"format:fix": "yarn run format:check --write",
+		"lint:check": "run-p --continue-on-error \"lint:*:check\"",
+		"lint:fix": "run-p --continue-on-error \"lint:*:fix\"",
+		"lint:code:check": "eslint . --cache",
+		"lint:code:fix": "yarn run lint:code:check --fix",
+		"lint:styles:check": "stylelint \"./**/*.css\" --cache --ignore-path ./.gitignore",
+		"lint:styles:fix": "yarn run lint:styles:check --fix",
+		"preinstall": "npx only-allow yarn",
+		"postinstall": "patch-package",
+		"prepare": "run-s setup",
+		"setup": "is-ci || simple-git-hooks",
+		"start": "next start",
+		"types:check": "tsc --noEmit",
+		"validate": "run-s format:check lint:check types:check"
+	},
+	"dependencies": {
+		"@mdx-js/loader": "^2.1.0",
+		"@next/bundle-analyzer": "^13.5.8",
+		"@react-aria/accordion": "^3.0.0-alpha.37",
+		"@react-aria/autocomplete": "^3.0.0-alpha.37",
+		"@react-aria/breadcrumbs": "^3.5.20",
+		"@react-aria/button": "^3.11.1",
+		"@react-aria/checkbox": "^3.15.1",
+		"@react-aria/combobox": "^3.11.1",
+		"@react-aria/dialog": "^3.5.21",
+		"@react-aria/focus": "^3.19.1",
+		"@react-aria/i18n": "^3.12.5",
+		"@react-aria/interactions": "^3.23.0",
+		"@react-aria/label": "^3.7.14",
+		"@react-aria/link": "^3.7.8",
+		"@react-aria/listbox": "^3.14.0",
+		"@react-aria/menu": "^3.17.0",
+		"@react-aria/numberfield": "^3.11.10",
+		"@react-aria/overlays": "^3.25.0",
+		"@react-aria/progress": "^3.4.19",
+		"@react-aria/searchfield": "^3.8.0",
+		"@react-aria/select": "^3.15.1",
+		"@react-aria/separator": "^3.4.5",
+		"@react-aria/textfield": "^3.16.0",
+		"@react-aria/tooltip": "^3.7.11",
+		"@react-aria/utils": "^3.27.0",
+		"@react-aria/virtualizer": "^3.10.1",
+		"@react-aria/visually-hidden": "^3.8.19",
+		"@react-stately/checkbox": "^3.6.11",
+		"@react-stately/collections": "^3.12.1",
+		"@react-stately/combobox": "^3.10.2",
+		"@react-stately/data": "^3.12.1",
+		"@react-stately/layout": "^3.13.9",
+		"@react-stately/list": "^3.11.2",
+		"@react-stately/menu": "^3.9.1",
+		"@react-stately/numberfield": "^3.9.9",
+		"@react-stately/overlays": "^3.6.13",
+		"@react-stately/searchfield": "^3.5.9",
+		"@react-stately/select": "^3.6.10",
+		"@react-stately/toggle": "^3.8.1",
+		"@react-stately/tooltip": "^3.5.1",
+		"@react-stately/tree": "^3.8.7",
+		"@react-stately/virtualizer": "^3.7.1",
+		"@stefanprobst/assert": "^1.0.3",
+		"@stefanprobst/capitalize": "^1.0.2",
+		"@stefanprobst/is-absolute-url": "^1.0.2",
+		"@stefanprobst/is-nonempty-array": "^1.0.1",
+		"@stefanprobst/is-nonempty-string": "^1.0.1",
+		"@stefanprobst/log": "^1.0.3",
+		"@stefanprobst/netlify-cms-oauth-client": "^0.1.3",
+		"@stefanprobst/next-error-boundary": "legacy",
+		"@stefanprobst/next-i18n": "legacy",
+		"@stefanprobst/next-page-metadata": "legacy",
+		"@stefanprobst/next-svg": "^4.2.1",
+		"@stefanprobst/next-theme": "legacy",
+		"@stefanprobst/pick": "^1.0.3",
+		"@stefanprobst/range": "^1.1.1",
+		"@stefanprobst/rehype-extract-toc": "^2.1.3",
+		"@stefanprobst/rehype-fragment-links": "^1.0.1",
+		"@stefanprobst/rehype-image-captions": "^1.1.0",
+		"@stefanprobst/rehype-lists-with-aria-role": "^1.0.1",
+		"@stefanprobst/rehype-next-image": "^1.0.0",
+		"@stefanprobst/rehype-next-links": "^2.0.2",
+		"@stefanprobst/rehype-noreferrer-links": "^1.0.2",
+		"@stefanprobst/rehype-shiki": "^2.2.0",
+		"@stefanprobst/remark-extract-yaml-frontmatter": "^2.2.3",
+		"@stefanprobst/remark-mdx-page": "^3.0.1",
+		"@stefanprobst/remark-resource-links": "^1.0.2",
+		"@stefanprobst/remark-smart-quotes": "^1.0.1",
+		"@stefanprobst/request": "^0.1.10",
+		"@stefanprobst/val-loader": "^4.0.0-4",
+		"change-case": "^4.1.2",
+		"clsx": "^1.1.1",
+		"date-fns": "^2.28.0",
+		"final-form": "^4.20.6",
+		"final-form-arrays": "^3.0.2",
+		"final-form-focus": "^1.1.2",
+		"final-form-set-field-data": "^1.0.2",
+		"final-form-set-field-touched": "^1.0.1",
+		"hast-util-heading-rank": "^2.1.0",
+		"hastscript": "^7.0.2",
+		"highlight-words-core": "^1.2.2",
+		"js-yaml": "^4.1.0",
+		"jwt-decode": "^3.1.2",
+		"mdast-util-to-string": "^3.1.0",
+		"netlify-cms-app": "^2.15.72",
+		"next": "^15.3.1",
+		"nodemailer": "^6.7.2",
+		"nprogress": "^0.2.0",
+		"patch-package": "^6.4.7",
+		"postinstall-postinstall": "^2.1.0",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
+		"react-final-form": "^6.5.9",
+		"react-final-form-arrays": "^3.1.4",
+		"react-query": "^3.39.3",
+		"react-toastify": "8.1.1",
+		"rehype-react": "^7.0.4",
+		"rehype-slug": "^5.0.1",
+		"rehype-stringify": "^9.0.2",
+		"remark-gfm": "^3.0.1",
+		"remark-parse": "^10.0.1",
+		"remark-rehype": "^10.1.0",
+		"remark-stringify": "^10.0.2",
+		"retext": "^8.1.0",
+		"retext-smartypants": "^5.1.0",
+		"sharp": "^0.34.1",
+		"shiki": "^0.10.0",
+		"strip-markdown": "^5.0.0",
+		"unified": "^10.1.1",
+		"unist-util-visit": "^4.1.0",
+		"use-composed-ref": "^1.4.0",
+		"vfile": "^5.3.0",
+		"vfile-matter": "^3.0.1",
+		"zod": "^3.14.4"
+	},
+	"devDependencies": {
+		"@acdh-oeaw/commitlint-config": "^2.0.0",
+		"@acdh-oeaw/eslint-config": "^2.0.9",
+		"@acdh-oeaw/prettier-config": "^2.0.1",
+		"@acdh-oeaw/stylelint-config": "^2.1.2",
+		"@acdh-oeaw/tsconfig": "^1.5.1",
+		"@commitlint/cli": "^19.8.0",
+		"@faker-js/faker": "^6.1.1",
+		"@mswjs/data": "^0.9.2",
+		"@next/eslint-plugin-next": "^15.3.1",
+		"@react-types/button": "^3.10.2",
+		"@react-types/checkbox": "^3.9.1",
+		"@react-types/combobox": "^3.13.2",
+		"@react-types/dialog": "^3.5.15",
+		"@react-types/listbox": "^3.5.4",
+		"@react-types/menu": "^3.9.14",
+		"@react-types/overlays": "^3.8.12",
+		"@react-types/progress": "^3.5.9",
+		"@react-types/select": "^3.9.9",
+		"@react-types/shared": "^3.27.0",
+		"@react-types/textfield": "^3.11.0",
+		"@stefanprobst/next-image-loader": "^1.0.3",
+		"@types/final-form-focus": "^1.1.2",
+		"@types/final-form-set-field-data": "^1.0.0",
+		"@types/final-form-set-field-touched": "^1.0.0",
+		"@types/highlight-words-core": "^1.2.1",
+		"@types/mdx": "^2.0.1",
+		"@types/node": "^22.15.2",
+		"@types/nodemailer": "^6.4.4",
+		"@types/nprogress": "^0.2.0",
+		"@types/react": "^18.3.20",
+		"@types/react-dom": "^18.3.6",
+		"autoprefixer": "^10.4.2",
+		"cross-env": "^7.0.3",
+		"eslint": "^9.25.1",
+		"eslint-config-flat-gitignore": "^2.1.0",
+		"globals": "^16.0.0",
+		"jose": "^4.3.8",
+		"lint-staged": "^15.5.1",
+		"match-sorter": "^6.3.1",
+		"msw": "^0.39.2",
+		"netlify-cms-proxy-server": "^1.3.23",
+		"npm-run-all2": "^7.0.2",
+		"postcss": "^8.4.5",
+		"postcss-custom-media": "^8.0.0",
+		"postcss-nesting": "^10.1.2",
+		"prettier": "^3.5.3",
+		"remark-cli": "^10.0.1",
+		"remark-frontmatter": "^4.0.1",
+		"remark-mdx": "^2.1.0",
+		"simple-git-hooks": "^2.13.0",
+		"strip-indent": "^4.0.0",
+		"stylelint": "^16.19.0",
+		"stylelint-order": "^7.0.0",
+		"typescript": "^5.8.3",
+		"typescript-eslint": "^8.31.0"
+	},
+	"browserslist": {
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		],
+		"production": [
+			">=0.75%",
+			"not dead",
+			"not op_mini all"
+		]
+	},
+	"commitlint": {
+		"extends": "@acdh-oeaw/commitlint-config"
+	},
+	"lint-staged": {
+		"*.@(js|ts|tsx)": [
+			"eslint --cache --fix",
+			"prettier --cache --cache-location ./.prettiercache --write"
+		],
+		"*.@(css)": [
+			"stylelint --cache --fix",
+			"prettier --cache --cache-location ./.prettiercache --write"
+		],
+		"*.!(css|js|ts|tsx)": "prettier --cache --cache-location ./.prettiercache --ignore-unknown --write"
+	},
+	"msw": {
+		"workerDirectory": "public"
+	},
+	"postcss": {
+		"plugins": {
+			"postcss-custom-media": {},
+			"postcss-nesting": {},
+			"autoprefixer": {}
+		}
+	},
+	"prettier": "@acdh-oeaw/prettier-config",
+	"remarkConfig": {
+		"plugins": [
+			"frontmatter",
+			"gfm"
+		]
+	},
+	"simple-git-hooks": {
+		"commit-msg": "yarn commitlint --edit",
+		"pre-commit": "yarn lint-staged"
+	},
+	"stylelint": {
+		"extends": "@acdh-oeaw/stylelint-config",
+		"rules": {
+			"at-rule-empty-line-before": null,
+			"block-no-empty": null,
+			"declaration-block-no-duplicate-properties": null,
+			"media-feature-range-notation": null,
+			"order/properties-order": null
+		}
+	}
 }
