--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"validate": "run-s format:check lint:check types:check"
 	},
 	"dependencies": {
+		"@acdh-oeaw/lib": "^0.3.2",
 		"@mdx-js/loader": "^2.1.0",
 		"@next/bundle-analyzer": "^15.3.1",
 		"@react-aria/accordion": "^3.0.0-alpha.37",
@@ -76,7 +77,6 @@
 		"@stefanprobst/is-absolute-url": "^1.0.2",
 		"@stefanprobst/is-nonempty-array": "^1.0.1",
 		"@stefanprobst/is-nonempty-string": "^1.0.1",
-		"@stefanprobst/log": "^1.0.3",
 		"@stefanprobst/netlify-cms-oauth-client": "^0.1.3",
 		"@stefanprobst/next-error-boundary": "legacy",
 		"@stefanprobst/next-i18n": "legacy",
