--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
 	"packageManager": "yarn@1.22.22",
 	"scripts": {
 		"analyze-bundle": "cross-env BUNDLE_ANALYZER=enabled next build",
-		"build": "next build",
+		"build": "run-s generate:static-data build:app",
+		"build:app": "next build",
 		"cms:server": "netlify-cms-proxy-server",
 		"dev": "next dev",
 		"format:check": "prettier . --cache --cache-location ./.prettiercache --check",
 		"format:fix": "yarn run format:check --write",
+		"generate:static-data": "dotenv -c -- tsx ./scripts/generate-static-data.ts",
 		"lint:check": "run-p --continue-on-error \"lint:*:check\"",
 		"lint:fix": "run-p --continue-on-error \"lint:*:fix\"",
 		"lint:code:check": "eslint . --cache",
@@ -91,7 +93,6 @@
 		"@stefanprobst/remark-resource-links": "^1.0.2",
 		"@stefanprobst/remark-smart-quotes": "^1.0.1",
 		"@stefanprobst/request": "^0.1.10",
-		"@stefanprobst/val-loader": "^4.0.0-4",
 		"change-case": "^4.1.2",
 		"clsx": "^1.1.1",
 		"date-fns": "^2.28.0",
@@ -170,6 +171,7 @@
 		"@types/react-dom": "^18.3.6",
 		"autoprefixer": "^10.4.2",
 		"cross-env": "^7.0.3",
+		"dotenv-cli": "^8.0.0",
 		"eslint": "^9.25.1",
 		"eslint-config-flat-gitignore": "^2.1.0",
 		"globals": "^16.0.0",
@@ -189,6 +191,7 @@
 		"strip-indent": "^4.0.0",
 		"stylelint": "^16.19.0",
 		"stylelint-order": "^7.0.0",
+		"tsx": "^4.19.3",
 		"typescript": "^5.8.3",
 		"typescript-eslint": "^8.31.0"
 	},
