--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
 		"./**/*.tsx",
 		".next/types/**/*.ts"
 	],
-	"exclude": ["node_modules", "out"],
+	"exclude": [".next", "content", "node_modules", "out", "public"],
 	"mdx": {
 		"checkMdx": false,
 		"plugins": ["remark-frontmatter", "remark-mdx-frontmatter", "remark-gfm"]
