--- a/package.json
+++ b/package.json
@@ -54,6 +54,15 @@
 		"@sentry/nextjs": "^9.14.0",
 		"@shikijs/rehype": "^3.3.0",
 		"@sindresorhus/slugify": "^2.2.1",
+		"@tiptap/extension-link": "^2.11.7",
+		"@tiptap/extension-table": "^2.11.7",
+		"@tiptap/extension-table-cell": "^2.11.7",
+		"@tiptap/extension-table-header": "^2.11.7",
+		"@tiptap/extension-table-row": "^2.11.7",
+		"@tiptap/extension-underline": "^2.11.7",
+		"@tiptap/pm": "^2.11.7",
+		"@tiptap/react": "^2.11.7",
+		"@tiptap/starter-kit": "^2.11.7",
 		"@valibot/i18n": "^1.0.0",
 		"@vercel/otel": "^1.11.0",
 		"client-only": "^0.0.1",
