chore: prefer path aliases in vscode autoimports

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -30,6 +30,7 @@
   },
   "stylelint.enable": true,
   "tailwindCSS.validate": false,
+  "typescript.preferences.importModuleSpecifier": "non-relative",
   "typescript.tsdk": "node_modules/typescript/lib",
   "workbench.startupEditor": "readme",
   "workbench.tree.indent": 16,
