chore: remove netlify cms

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
 	},
 	"dependencies": {
 		"@acdh-oeaw/lib": "^0.3.2",
-		"@mdx-js/loader": "^2.1.0",
+		"@mdx-js/mdx": "^3.1.0",
 		"@next/bundle-analyzer": "^15.3.1",
 		"@react-aria/accordion": "^3.0.0-alpha.37",
 		"@react-aria/autocomplete": "^3.0.0-alpha.37",
@@ -74,23 +74,11 @@
 		"@react-stately/tooltip": "^3.5.1",
 		"@react-stately/tree": "^3.8.7",
 		"@react-stately/virtualizer": "^3.7.1",
-		"@stefanprobst/netlify-cms-oauth-client": "^0.1.3",
 		"@stefanprobst/next-error-boundary": "^3.0.2",
 		"@stefanprobst/next-i18n": "^1.2.0",
 		"@stefanprobst/next-page-metadata": "^2.0.5",
 		"@stefanprobst/next-svg": "^4.2.1",
-		"@stefanprobst/rehype-extract-toc": "^2.1.3",
-		"@stefanprobst/rehype-fragment-links": "^1.0.1",
-		"@stefanprobst/rehype-image-captions": "^1.1.0",
-		"@stefanprobst/rehype-lists-with-aria-role": "^1.0.1",
-		"@stefanprobst/rehype-next-image": "^1.0.0",
-		"@stefanprobst/rehype-next-links": "^2.0.2",
-		"@stefanprobst/rehype-noreferrer-links": "^1.0.2",
-		"@stefanprobst/rehype-shiki": "^2.2.0",
-		"@stefanprobst/remark-extract-yaml-frontmatter": "^2.2.3",
-		"@stefanprobst/remark-mdx-page": "^3.0.1",
-		"@stefanprobst/remark-resource-links": "^1.0.2",
-		"@stefanprobst/remark-smart-quotes": "^1.0.1",
+		"@stefanprobst/rehype-extract-toc": "^3.0.0",
 		"@stefanprobst/request": "^0.1.10",
 		"change-case": "^4.1.2",
 		"clsx": "^1.1.1",
@@ -100,17 +88,12 @@
 		"final-form-focus": "^1.1.2",
 		"final-form-set-field-data": "^1.0.2",
 		"final-form-set-field-touched": "^1.0.1",
-		"hast-util-heading-rank": "^2.1.0",
-		"hastscript": "^7.0.2",
 		"highlight-words-core": "^1.2.2",
-		"js-yaml": "^4.1.0",
 		"jwt-decode": "^3.1.2",
-		"mdast-util-to-string": "^3.1.0",
-		"netlify-cms-app": "^2.15.72",
+		"mdast-util-to-markdown": "^2.1.2",
 		"next": "^15.3.1",
 		"nodemailer": "^6.7.2",
 		"nprogress": "^0.2.0",
-		"patch-package": "^6.4.7",
 		"react": "^18.3.1",
 		"react-aria-components": "^1.8.0",
 		"react-dom": "^18.3.1",
@@ -118,28 +101,23 @@
 		"react-final-form-arrays": "^3.1.4",
 		"react-query": "^3.39.3",
 		"react-toastify": "8.1.1",
-		"rehype-react": "^7.0.4",
-		"rehype-slug": "^5.0.1",
-		"rehype-stringify": "^9.0.2",
-		"remark-gfm": "^3.0.1",
-		"remark-parse": "^10.0.1",
-		"remark-rehype": "^10.1.0",
-		"remark-stringify": "^10.0.2",
-		"retext": "^8.1.0",
-		"retext-smartypants": "^5.1.0",
+		"react-transition-group": "^4.4.5",
+		"rehype-react": "^8.0.0",
+		"remark-frontmatter": "^5.0.0",
+		"remark-gfm": "^4.0.1",
+		"remark-parse": "^11.0.0",
+		"remark-rehype": "^11.1.2",
 		"sharp": "^0.34.1",
-		"shiki": "^0.10.0",
-		"strip-markdown": "^5.0.0",
-		"to-vfile": "^7.2.4",
-		"unified": "^10.1.1",
-		"unist-util-visit": "^4.1.0",
+		"strip-markdown": "^6.0.0",
+		"to-vfile": "^8.0.0",
+		"unified": "^11.0.5",
 		"use-composed-ref": "^1.4.0",
-		"vfile": "^5.3.0",
-		"vfile-matter": "^3.0.1",
+		"vfile": "^6.0.3",
+		"vfile-matter": "^5.0.1",
 		"zod": "^3.14.4"
 	},
 	"devDependencies": {
-		"@acdh-oeaw/eslint-config": "^2.0.9",
+		"@acdh-oeaw/eslint-config": "latest",
 		"@acdh-oeaw/eslint-config-react": "^2.0.13",
 		"@acdh-oeaw/prettier-config": "^2.0.1",
 		"@acdh-oeaw/stylelint-config": "^2.1.2",
@@ -162,15 +140,16 @@
 		"@types/final-form-focus": "^1.1.2",
 		"@types/final-form-set-field-data": "^1.0.0",
 		"@types/final-form-set-field-touched": "^1.0.0",
+		"@types/hast": "^3.0.4",
 		"@types/highlight-words-core": "^1.2.1",
-		"@types/mdx": "^2.0.1",
+		"@types/mdast": "^4.0.4",
+		"@types/mdx": "^2.0.13",
 		"@types/node": "^22.15.2",
 		"@types/nodemailer": "^6.4.4",
 		"@types/nprogress": "^0.2.0",
 		"@types/react": "^18.3.20",
 		"@types/react-dom": "^18.3.6",
 		"autoprefixer": "^10.4.2",
-		"cross-env": "^7.0.3",
 		"dotenv-cli": "^8.0.0",
 		"eslint": "^9.25.1",
 		"eslint-config-flat-gitignore": "^2.1.0",
@@ -178,21 +157,15 @@
 		"jose": "^4.3.8",
 		"lint-staged": "^15.5.1",
 		"match-sorter": "^6.3.1",
-		"netlify-cms-proxy-server": "^1.3.23",
 		"npm-run-all2": "^7.0.2",
 		"postcss": "^8.5.3",
 		"postcss-custom-media": "^11.0.5",
 		"postcss-nesting": "^13.0.1",
 		"prettier": "^3.5.3",
 		"prettier-plugin-tailwindcss": "^0.6.11",
-		"remark-cli": "^10.0.1",
-		"remark-frontmatter": "^4.0.1",
-		"remark-mdx": "^2.1.0",
 		"simple-git-hooks": "^2.13.0",
 		"strip-indent": "^4.0.0",
 		"stylelint": "^16.19.0",
-		"stylelint-order": "^7.0.0",
-		"svgo-loader": "^3.0.3",
 		"tailwindcss": "^4.1.5",
 		"tailwindcss-react-aria-components": "^2.0.0",
 		"tsx": "^4.19.3",
