--- a/package.json
+++ b/package.json
@@ -80,18 +80,19 @@
 		"@stefanprobst/next-svg": "^4.2.1",
 		"@stefanprobst/rehype-extract-toc": "^3.0.0",
 		"@stefanprobst/request": "^0.1.10",
-		"change-case": "^4.1.2",
-		"clsx": "^1.1.1",
-		"date-fns": "^2.28.0",
+		"change-case": "^5.4.4",
+		"clsx": "^2.1.1",
+		"date-fns": "^4.1.0",
 		"final-form": "^4.20.6",
 		"final-form-arrays": "^3.0.2",
 		"final-form-focus": "^1.1.2",
 		"final-form-set-field-data": "^1.0.2",
 		"final-form-set-field-touched": "^1.0.1",
-		"highlight-words-core": "^1.2.2",
-		"jwt-decode": "^3.1.2",
+		"highlight-words-core": "^1.2.3",
+		"jwt-decode": "^4.0.0",
 		"mdast-util-to-markdown": "^2.1.2",
 		"next": "^15.3.1",
+		"next-intl": "^4.1.0",
 		"nodemailer": "^6.7.2",
 		"nprogress": "^0.2.0",
 		"react": "^18.3.1",
@@ -114,10 +115,10 @@
 		"use-composed-ref": "^1.4.0",
 		"vfile": "^6.0.3",
 		"vfile-matter": "^5.0.1",
-		"zod": "^3.14.4"
+		"zod": "^3.24.3"
 	},
 	"devDependencies": {
-		"@acdh-oeaw/eslint-config": "latest",
+		"@acdh-oeaw/eslint-config": "^2.0.9",
 		"@acdh-oeaw/eslint-config-react": "^2.0.13",
 		"@acdh-oeaw/prettier-config": "^2.0.1",
 		"@acdh-oeaw/stylelint-config": "^2.1.2",
@@ -134,7 +135,6 @@
 		"@react-types/select": "^3.9.9",
 		"@react-types/shared": "^3.27.0",
 		"@react-types/textfield": "^3.11.0",
-		"@stefanprobst/next-image-loader": "^1.0.3",
 		"@tailwindcss/postcss": "^4.1.5",
 		"@tailwindcss/typography": "^0.5.16",
 		"@types/final-form-focus": "^1.1.2",
@@ -156,15 +156,13 @@
 		"globals": "^16.0.0",
 		"jose": "^4.3.8",
 		"lint-staged": "^15.5.1",
-		"match-sorter": "^6.3.1",
-		"npm-run-all2": "^7.0.2",
+		"npm-run-all2": "^8.0.1",
 		"postcss": "^8.5.3",
 		"postcss-custom-media": "^11.0.5",
 		"postcss-nesting": "^13.0.1",
 		"prettier": "^3.5.3",
 		"prettier-plugin-tailwindcss": "^0.6.11",
 		"simple-git-hooks": "^2.13.0",
-		"strip-indent": "^4.0.0",
 		"stylelint": "^16.19.0",
 		"tailwindcss": "^4.1.5",
 		"tailwindcss-react-aria-components": "^2.0.0",
