--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
 		"nodemailer": "^6.7.2",
 		"nprogress": "^0.2.0",
 		"react": "^18.3.1",
+		"react-aria": "^3.39.0",
 		"react-aria-components": "^1.8.0",
 		"react-dom": "^18.3.1",
 		"react-final-form": "^6.5.9",
