chore: update react-toastify

--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
 		"@stefanprobst/next-page-metadata": "^2.0.5",
 		"@stefanprobst/next-svg": "^4.2.1",
 		"@stefanprobst/rehype-extract-toc": "^3.0.0",
-		"@stefanprobst/request": "^0.1.10",
+		"@stefanprobst/request": "^0.2.1",
 		"change-case": "^5.4.4",
 		"clsx": "^2.1.1",
 		"date-fns": "^4.1.0",
@@ -101,7 +101,7 @@
 		"react-final-form": "^6.5.9",
 		"react-final-form-arrays": "^3.1.4",
 		"react-query": "^3.39.3",
-		"react-toastify": "8.1.1",
+		"react-toastify": "^10.0.6",
 		"react-transition-group": "^4.4.5",
 		"rehype-react": "^8.0.0",
 		"remark-frontmatter": "^5.0.0",
@@ -154,7 +154,6 @@
 		"eslint": "^9.25.1",
 		"eslint-config-flat-gitignore": "^2.1.0",
 		"globals": "^16.0.0",
-		"jose": "^4.3.8",
 		"lint-staged": "^15.5.1",
 		"npm-run-all2": "^8.0.1",
 		"postcss": "^8.5.3",
