--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
 		"react-toastify": "^10.0.6",
 		"react-transition-group": "^4.4.5",
 		"rehype-react": "^8.0.0",
+		"rehype-slug": "^6.0.0",
 		"remark-frontmatter": "^5.0.0",
 		"remark-gfm": "^4.0.1",
 		"remark-parse": "^11.0.0",
