--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
 		"final-form-set-field-touched": "^1.0.1",
 		"highlight-words-core": "^1.2.3",
 		"jwt-decode": "^4.0.0",
+		"lucide-react": "^0.507.0",
 		"mdast-util-to-markdown": "^2.1.2",
 		"next": "^15.3.1",
 		"next-intl": "^4.1.0",
@@ -103,6 +104,7 @@
 		"react-toastify": "^10.0.6",
 		"react-transition-group": "^4.4.5",
 		"rehype-react": "^8.0.0",
+		"rehype-slug": "^6.0.0",
 		"remark-frontmatter": "^5.0.0",
 		"remark-gfm": "^4.0.1",
 		"remark-parse": "^11.0.0",
@@ -155,7 +157,6 @@
 		"lint-staged": "^15.5.1",
 		"npm-run-all2": "^8.0.1",
 		"postcss": "^8.5.3",
-		"postcss-custom-media": "^11.0.5",
 		"postcss-nesting": "^13.0.1",
 		"prettier": "^3.5.3",
 		"prettier-plugin-tailwindcss": "^0.6.11",
@@ -192,7 +193,6 @@
 	},
 	"postcss": {
 		"plugins": {
-			"postcss-custom-media": {},
 			"postcss-nesting": {},
 			"autoprefixer": {},
 			"@tailwindcss/postcss": {}
