--- a/package.json
+++ b/package.json
@@ -31,7 +31,12 @@
 		"validate": "run-p format:check lint:check types:check test"
 	},
 	"dependencies": {
+		"@acdh-oeaw/keystatic-lib": "^0.6.1",
 		"@acdh-oeaw/lib": "^0.3.2",
+		"@acdh-oeaw/mdx-lib": "^0.1.3",
+		"@acdh-oeaw/style-variants": "^0.1.0",
+		"@keystatic/core": "^0.5.47",
+		"@keystatic/next": "^5.0.4",
 		"@mdx-js/mdx": "^3.1.0",
 		"@next/bundle-analyzer": "^15.3.1",
 		"@react-aria/accordion": "^3.0.0-alpha.37",
@@ -74,10 +79,10 @@
 		"@react-stately/tooltip": "^3.5.1",
 		"@react-stately/tree": "^3.8.7",
 		"@react-stately/virtualizer": "^3.7.1",
+		"@sindresorhus/slugify": "^2.2.1",
 		"@stefanprobst/next-error-boundary": "^3.0.2",
 		"@stefanprobst/next-page-metadata": "^2.0.5",
 		"@stefanprobst/next-svg": "^4.2.1",
-		"@stefanprobst/rehype-extract-toc": "^3.0.0",
 		"@stefanprobst/request": "^0.2.1",
 		"change-case": "^5.4.4",
 		"clsx": "^2.1.1",
@@ -88,6 +93,7 @@
 		"final-form-set-field-data": "^1.0.2",
 		"final-form-set-field-touched": "^1.0.1",
 		"highlight-words-core": "^1.2.3",
+		"image-dimensions": "^2.3.0",
 		"jwt-decode": "^4.0.0",
 		"lucide-react": "^0.507.0",
 		"mdast-util-to-markdown": "^2.1.2",
@@ -109,6 +115,7 @@
 		"remark-gfm": "^4.0.1",
 		"remark-parse": "^11.0.0",
 		"remark-rehype": "^11.1.2",
+		"remark-smartypants": "^3.0.2",
 		"sharp": "^0.34.1",
 		"strip-markdown": "^6.0.0",
 		"to-vfile": "^8.0.0",
