--- a/.env.local.example
+++ b/.env.local.example
@@ -16,7 +16,7 @@ NEXT_PUBLIC_APP_BASE_URL="http://localhost:3000"
 NEXT_PUBLIC_BOTS="disabled"
 # validate environment variables
 ENV_VALIDATION="enabled"
-# token for server-side invalidation
+#  revalidation token for ondemand ISR
 REVALIDATION_TOKEN="secret"
 # used for fetching last-updated timestamps
 NEXT_PUBLIC_GITHUB_REPOSITORY="sshoc/sshoc-marketplace-frontend"
