feat: add keystatic cms (#268)
this adds keystatic cms for editing static content pages (about,
contribute, contact, terms of use, privacy policy pages) and site
metadata. replaces the previously removed netlify-cms.

the order of about and contribute pages in the navigation menu can be
configured in the navigation collection.

TODO:

- [x] api endpoint widget for cms (used in api docs page)
- [x] cms widgets for layout (everything which uses `<div>` in the
markdown contents currently)
- [ ] migrate `<div>` and `<table>` to widgets
- [ ] move images to assets folder

FOLLOW-UP:

- [ ] use site metadata from content folder

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,9 +1,48 @@
-NEXT_PUBLIC_APP_BASE_URL=http://localhost:3000
+# -------------------------------------------------------------------------------------------------
+# environment variables
+# -------------------------------------------------------------------------------------------------
+# - public environment variables must be prefixed with `NEXT_PUBLIC_`.
+# - when adding new environment variables, don't forget to also update the
+#   validation schema in `./config/env.config.ts`.
 
-# NEXT_PUBLIC_API_BASE_URL=https://marketplace-api.sshopencloud.eu
-NEXT_PUBLIC_API_BASE_URL=https://sshoc-marketplace-api.acdh-dev.oeaw.ac.at
-# NEXT_PUBLIC_API_BASE_URL=http://localhost:8080
+# -------------------------------------------------------------------------------------------------
+# app
+# -------------------------------------------------------------------------------------------------
+NEXT_PUBLIC_APP_BASE_URL="http://localhost:3000"
+# imprint service
+# NEXT_PUBLIC_IMPRINT_SERVICE_BASE_URL="https://imprint.acdh.oeaw.ac.at"
+# NEXT_PUBLIC_REDMINE_ID=
+# web crawlers
+NEXT_PUBLIC_BOTS="disabled"
+# validate environment variables
+ENV_VALIDATION="enabled"
+#  revalidation token for ondemand ISR
+REVALIDATION_TOKEN="secret"
+# used for fetching last-updated timestamps
+NEXT_PUBLIC_GITHUB_REPOSITORY="sshoc/sshoc-marketplace-frontend"
+NEXT_PUBLIC_GITHUB_REPOSITORY_BRANCH="main"
 
-NEXT_PUBLIC_GITHUB_REPOSITORY=sshoc/sshoc-marketplace-frontend
+# -------------------------------------------------------------------------------------------------
+# analytics
+# -------------------------------------------------------------------------------------------------
+# NEXT_PUBLIC_GOOGLE_SITE_VERIFICATION=
+NEXT_PUBLIC_MATOMO_BASE_URL="https://matomo.acdh.oeaw.ac.at"
+# NEXT_PUBLIC_MATOMO_ID=
 
-REVALIDATION_TOKEN=secret
+# -------------------------------------------------------------------------------------------------
+# api
+# -------------------------------------------------------------------------------------------------
+# NEXT_PUBLIC_API_BASE_URL="https://marketplace-api.sshopencloud.eu"
+NEXT_PUBLIC_API_BASE_URL="https://sshoc-marketplace-api.acdh-dev.oeaw.ac.at"
+# NEXT_PUBLIC_API_BASE_URL="http://localhost:8080"
+
+# -------------------------------------------------------------------------------------------------
+# keystatic cms
+# -------------------------------------------------------------------------------------------------
+# KEYSTATIC_GITHUB_CLIENT_ID=
+# KEYSTATIC_GITHUB_CLIENT_SECRET=
+# KEYSTATIC_SECRET=
+# NEXT_PUBLIC_KEYSTATIC_GITHUB_APP_SLUG=
+# NEXT_PUBLIC_KEYSTATIC_GITHUB_REPO_NAME="sshoc-marketplace-frontend"
+# NEXT_PUBLIC_KEYSTATIC_GITHUB_REPO_OWNER="sshoc"
+# NEXT_PUBLIC_KEYSTATIC_MODE="github"
