build: don't quote build args

--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -53,9 +53,9 @@ jobs:
             NEXT_PUBLIC_API_BASE_URL=https://marketplace-api.sshopencloud.eu
             NEXT_PUBLIC_APP_BASE_URL=https://marketplace.sshopencloud.eu
             NEXT_PUBLIC_BOTS=enabled
-            NEXT_PUBLIC_KEYSTATIC_GITHUB_APP_SLUG="sshoc-marketplace-cms"
-            NEXT_PUBLIC_KEYSTATIC_GITHUB_REPO_NAME="sshoc-marketplace-frontend"
-            NEXT_PUBLIC_KEYSTATIC_GITHUB_REPO_OWNER="sshoc"
+            NEXT_PUBLIC_KEYSTATIC_GITHUB_APP_SLUG=sshoc-marketplace-cms
+            NEXT_PUBLIC_KEYSTATIC_GITHUB_REPO_NAME=sshoc-marketplace-frontend
+            NEXT_PUBLIC_KEYSTATIC_GITHUB_REPO_OWNER=sshoc
             NEXT_PUBLIC_KEYSTATIC_MODE="github"
             NEXT_PUBLIC_GOOGLE_SITE_VERIFICATION=nGy-4NymUoG2gvqsocWhF8A7TY9wVh5bAVIrPMNeC8M
             NEXT_PUBLIC_MATOMO_BASE_URL=https://matomo.acdh.oeaw.ac.at/
@@ -96,9 +96,9 @@ jobs:
             NEXT_PUBLIC_API_BASE_URL=https://sshoc-marketplace-api-stage.acdh-dev.oeaw.ac.at
             NEXT_PUBLIC_APP_BASE_URL=https://sshoc-marketplace-stage.acdh-dev.oeaw.ac.at
             NEXT_PUBLIC_BOTS=disabled
-            NEXT_PUBLIC_KEYSTATIC_GITHUB_APP_SLUG="sshoc-marketplace-cms"
-            NEXT_PUBLIC_KEYSTATIC_GITHUB_REPO_NAME="sshoc-marketplace-frontend"
-            NEXT_PUBLIC_KEYSTATIC_GITHUB_REPO_OWNER="sshoc"
+            NEXT_PUBLIC_KEYSTATIC_GITHUB_APP_SLUG=sshoc-marketplace-cms
+            NEXT_PUBLIC_KEYSTATIC_GITHUB_REPO_NAME=sshoc-marketplace-frontend
+            NEXT_PUBLIC_KEYSTATIC_GITHUB_REPO_OWNER=sshoc
             NEXT_PUBLIC_KEYSTATIC_MODE="github"
             NEXT_PUBLIC_MATOMO_BASE_URL=https://matomo.acdh.oeaw.ac.at/
             NEXT_PUBLIC_MATOMO_ID=198
@@ -138,9 +138,9 @@ jobs:
             NEXT_PUBLIC_API_BASE_URL=https://sshoc-marketplace-api.acdh-dev.oeaw.ac.at
             NEXT_PUBLIC_APP_BASE_URL=https://sshoc-marketplace.acdh-dev.oeaw.ac.at
             NEXT_PUBLIC_BOTS=disabled
-            NEXT_PUBLIC_KEYSTATIC_GITHUB_APP_SLUG="sshoc-marketplace-cms"
-            NEXT_PUBLIC_KEYSTATIC_GITHUB_REPO_NAME="sshoc-marketplace-frontend"
-            NEXT_PUBLIC_KEYSTATIC_GITHUB_REPO_OWNER="sshoc"
+            NEXT_PUBLIC_KEYSTATIC_GITHUB_APP_SLUG=sshoc-marketplace-cms
+            NEXT_PUBLIC_KEYSTATIC_GITHUB_REPO_NAME=sshoc-marketplace-frontend
+            NEXT_PUBLIC_KEYSTATIC_GITHUB_REPO_OWNER=sshoc
             NEXT_PUBLIC_KEYSTATIC_MODE="github"
             NEXT_PUBLIC_MATOMO_BASE_URL=https://matomo.acdh.oeaw.ac.at/
             NEXT_PUBLIC_MATOMO_ID=190
