build: dont quote build-args

--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -56,7 +56,7 @@ jobs:
             NEXT_PUBLIC_KEYSTATIC_GITHUB_APP_SLUG=sshoc-marketplace-cms
             NEXT_PUBLIC_KEYSTATIC_GITHUB_REPO_NAME=sshoc-marketplace-frontend
             NEXT_PUBLIC_KEYSTATIC_GITHUB_REPO_OWNER=sshoc
-            NEXT_PUBLIC_KEYSTATIC_MODE="github"
+            NEXT_PUBLIC_KEYSTATIC_MODE=github
             NEXT_PUBLIC_GOOGLE_SITE_VERIFICATION=nGy-4NymUoG2gvqsocWhF8A7TY9wVh5bAVIrPMNeC8M
             NEXT_PUBLIC_MATOMO_BASE_URL=https://matomo.acdh.oeaw.ac.at/
             NEXT_PUBLIC_MATOMO_ID=179
@@ -99,7 +99,7 @@ jobs:
             NEXT_PUBLIC_KEYSTATIC_GITHUB_APP_SLUG=sshoc-marketplace-cms
             NEXT_PUBLIC_KEYSTATIC_GITHUB_REPO_NAME=sshoc-marketplace-frontend
             NEXT_PUBLIC_KEYSTATIC_GITHUB_REPO_OWNER=sshoc
-            NEXT_PUBLIC_KEYSTATIC_MODE="github"
+            NEXT_PUBLIC_KEYSTATIC_MODE=github
             NEXT_PUBLIC_MATOMO_BASE_URL=https://matomo.acdh.oeaw.ac.at/
             NEXT_PUBLIC_MATOMO_ID=198
             NEXT_PUBLIC_GITHUB_REPOSITORY=sshoc/sshoc-marketplace-frontend
@@ -141,7 +141,7 @@ jobs:
             NEXT_PUBLIC_KEYSTATIC_GITHUB_APP_SLUG=sshoc-marketplace-cms
             NEXT_PUBLIC_KEYSTATIC_GITHUB_REPO_NAME=sshoc-marketplace-frontend
             NEXT_PUBLIC_KEYSTATIC_GITHUB_REPO_OWNER=sshoc
-            NEXT_PUBLIC_KEYSTATIC_MODE="github"
+            NEXT_PUBLIC_KEYSTATIC_MODE=github
             NEXT_PUBLIC_MATOMO_BASE_URL=https://matomo.acdh.oeaw.ac.at/
             NEXT_PUBLIC_MATOMO_ID=190
             NEXT_PUBLIC_GITHUB_REPOSITORY=sshoc/sshoc-marketplace-frontend
