--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
 		"react-final-form": "^6.5.9",
 		"react-final-form-arrays": "^3.1.4",
 		"react-query": "^3.39.3",
+		"react-schemaorg": "^2.0.0",
 		"react-toastify": "^10.0.6",
 		"react-transition-group": "^4.4.5",
 		"rehype-react": "^8.0.0",
@@ -168,6 +169,7 @@
 		"postcss-nesting": "^13.0.1",
 		"prettier": "^3.5.3",
 		"prettier-plugin-tailwindcss": "^0.6.11",
+		"schema-dts": "^1.1.5",
 		"simple-git-hooks": "^2.13.0",
 		"stylelint": "^16.19.0",
 		"tailwindcss": "^4.1.5",
