--- a/package.json
+++ b/package.json
@@ -82,7 +82,6 @@
 		"@react-stately/virtualizer": "^3.7.1",
 		"@sindresorhus/slugify": "^2.2.1",
 		"@stefanprobst/next-error-boundary": "^3.0.2",
-		"@stefanprobst/next-page-metadata": "^2.0.5",
 		"@stefanprobst/next-svg": "^4.2.1",
 		"@stefanprobst/request": "^0.2.1",
 		"change-case": "^5.4.4",
@@ -108,6 +107,7 @@
 		"react-final-form": "^6.5.9",
 		"react-final-form-arrays": "^3.1.4",
 		"react-query": "^3.39.3",
+		"react-schemaorg": "^2.0.0",
 		"react-toastify": "^10.0.6",
 		"react-transition-group": "^4.4.5",
 		"rehype-react": "^8.0.0",
@@ -169,6 +169,7 @@
 		"postcss-nesting": "^13.0.1",
 		"prettier": "^3.5.3",
 		"prettier-plugin-tailwindcss": "^0.6.11",
+		"schema-dts": "^1.1.5",
 		"simple-git-hooks": "^2.13.0",
 		"stylelint": "^16.19.0",
 		"tailwindcss": "^4.1.5",
