build: pin next.js version

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"node": "22.x",
 		"pnpm": "10.x"
 	},
-	"packageManager": "pnpm@10.10.0",
+	"packageManager": "pnpm@10.12.1",
 	"scripts": {
 		"analyze": "BUNDLE_ANALYZER=\"enabled\" next build --no-lint",
 		"build": "run-s generate:static-data build:app",
@@ -97,7 +97,7 @@
 		"jwt-decode": "^4.0.0",
 		"lucide-react": "^0.507.0",
 		"mdast-util-to-markdown": "^2.1.2",
-		"next": "^15.3.1",
+		"next": "15.1.8",
 		"next-intl": "^4.1.0",
 		"nodemailer": "^6.7.2",
 		"react": "^18.3.1",
@@ -133,7 +133,7 @@
 		"@acdh-oeaw/prettier-config": "^2.0.1",
 		"@acdh-oeaw/stylelint-config": "^2.1.2",
 		"@acdh-oeaw/tsconfig": "^1.5.1",
-		"@next/eslint-plugin-next": "^15.3.1",
+		"@next/eslint-plugin-next": "15.1.8",
 		"@react-types/button": "^3.10.2",
 		"@react-types/checkbox": "^3.9.1",
 		"@react-types/combobox": "^3.13.2",
