--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,8 +2,8 @@
 	"recommendations": [
 		"dbaeumer.vscode-eslint",
 		"editorconfig.editorconfig",
-		"esbenp.prettier-vscode",
 		"mikestead.dotenv",
+		"prettier.prettier-vscode",
 		"stylelint.vscode-stylelint",
 		"unifiedjs.vscode-mdx"
 	]
